--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
+bootstrap/css/* linguist-vendored
+bootstrap/js/* linguist-vendored
 bootstrap/* linguist-vendored
 css/* linguist-vendored
 js/* linguist-vendored
